--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h4>Participate to be the best in our many tournaments for the chance to win a prize while competing agaisnt the worst players on earth!</h4>
             <img src="/images/Bracket.PNG" class="containerimages">
         </div>
+        <div class="line"></div>
         <div class="container">
             <h4>Find a tournament every week!</h4>
             <img src="/images/MATCH FOUND.PNG" class="containerimages">
