--- a/tournaments.html
+++ b/tournaments.html
@@ -29,15 +29,15 @@
         <section class="cartoes">
             <div class="cartao">
                 <img src="/images/hoi4.png" class="cartaoimg">
-                <p>On 24/6/2023 at 15:00 (GMT+0) a last man standing type tournament in Hearts of Iron 4 where the last player alive shall win will be hosted by the Galactic Council discord group join their discord to participate: <a href="https://discord.gg/Yd5HP9VS8R">Galactic Council</a></p>
+                <p class="textocartao">On 24/6/2023 at 15:00 (GMT+0) a last man standing type tournament in Hearts of Iron 4 where the last player alive shall win will be hosted by the Galactic Council discord group join their discord to participate: <a href="https://discord.gg/Yd5HP9VS8R">Galactic Council</a></p>
             </div>
             <div class="cartao">
                 <img src="/images/Stellaris.PNG" class="cartaoimg">
-                <p>On 28/6/2023 at 18:00 (GMT+0) a scored tournament in Stellaris where at the end the player with most score wins will be hosted by the Galactic Council discord group join their discord to participate: <a href="https://discord.gg/Yd5HP9VS8R">Galactic Council</a></p>
+                <p class="textocartao">On 28/6/2023 at 18:00 (GMT+0) a scored tournament in Stellaris where at the end the player with most score wins will be hosted by the Galactic Council discord group join their discord to participate: <a href="https://discord.gg/Yd5HP9VS8R">Galactic Council</a></p>
             </div>
             <div class="cartao">
                 <img src="/images/CSGO.png" class="cartaoimg">
-                <p>On 30/6/2023 at 14:00 (GMT+0) a 1vs1 or 2vs2(depending on the ammount of participants) tournament in Counter Strike: where the play or team who has not been eliminated by the end wins will be hosted by the ISLA-Santarem discord group join their discord to participate: <a href="https://discord.gg/Yn9ERAuQVW">ISLA-Santarem</a></p>
+                <p class="textocartao">On 30/6/2023 at 14:00 (GMT+0) a 1vs1 or 2vs2(depending on the ammount of participants) tournament in Counter Strike: where the play or team who has not been eliminated by the end wins will be hosted by the ISLA-Santarem discord group join their discord to participate: <a href="https://discord.gg/Yn9ERAuQVW">ISLA-Santarem</a></p>
             </div>  
         </section>
     
